[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/BuildTabTheme.tres" type="Theme" id=1]
[ext_resource path="res://resources/GameTheme.tres" type="Theme" id=2]
[ext_resource path="res://sprites/textiletex.png" type="Texture" id=3]
[ext_resource path="res://sprites/BG/IconRect.png" type="Texture" id=4]
[ext_resource path="res://scripts/WinScreen.gd" type="Script" id=5]

[node name="WinScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color( 0.6, 0.145098, 0.145098, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 3 )
stretch_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Control" type="Control" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 96 )

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 100.0
margin_right = 1280.0
margin_bottom = 222.0
theme_type_variation = "96f"
text = "You WON!"
align = 1

[node name="TimeLivedLabel" type="Label" parent="VBoxContainer"]
margin_top = 226.0
margin_right = 1280.0
margin_bottom = 418.0
theme_type_variation = "48f"
text = "You've survived over 100 days!
You can continue in normal mode without score, 
but we recommend starting new hard mode!"
align = 1

[node name="MonumentBuiltLabel" type="Label" parent="VBoxContainer"]
visible = false
margin_top = 292.0
margin_right = 1280.0
margin_bottom = 354.0
theme_type_variation = "48f"
text = "You've built the monument!"
align = 1

[node name="Control2" type="Control" parent="VBoxContainer"]
margin_top = 422.0
margin_right = 1280.0
margin_bottom = 503.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 507.0
margin_right = 1280.0
margin_bottom = 635.0
alignment = 1

[node name="Return" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
self_modulate = Color( 0.129412, 1, 0, 1 )
margin_left = 382.0
margin_right = 638.0
margin_bottom = 128.0
rect_min_size = Vector2( 256, 128 )
size_flags_horizontal = 5
size_flags_vertical = 5
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 3
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Return"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -49.5
margin_top = -20.5
margin_right = 49.5
margin_bottom = 20.5
size_flags_horizontal = 4
theme = ExtResource( 1 )
text = "Return"

[node name="Continue" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
self_modulate = Color( 0.129412, 1, 0, 1 )
margin_left = 642.0
margin_right = 898.0
margin_bottom = 128.0
rect_min_size = Vector2( 256, 128 )
size_flags_horizontal = 5
size_flags_vertical = 5
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 3
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Continue"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.5
margin_top = -20.5
margin_right = 65.5
margin_bottom = 20.5
theme = ExtResource( 1 )
text = "Continue"

[node name="Control3" type="Control" parent="VBoxContainer"]
margin_top = 639.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Return" to="." method="_on_Return_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Continue" to="." method="_on_Continue_Button_pressed"]
